# jira-power-tools

./: CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: publishpackage.yml  pythontest.yml
src/jirapt/: jira.py  jira_response_iterable.py  jql_builder.py
tests/jirapt/: test_jql_builder.py
