[tool.poetry]
name = "jira-power-tools"
version = "0.3.0"
description = "Tools to improve working with the python jira API."
authors = ["David Bradford <david.bradford@mongodb.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbradf/jira-power-tools"
packages = [
    { include = "jirapt", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
jira = "^2"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-black = "^0.3"
pytest-cov = "^2"
pytest-flake8 = "^1"
pytest-mypy = "^0.6"
pytest-pydocstyle = "^2"
pytest-sugar = "^0.9"
black = "^19.10b0"
mypy = "^0.782"

[tool.pytest.ini_options]
flake8-ignore = "W605 W503 W291 E203 E501"
addopts = "--flake8 --black --pydocstyle --mypy"

[tool.black]
line-length = 100
target-version = ['py37']

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
